--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div class="row">
                 <div class="services-col">
                     <h3>Event Decorate</h3>
-                    <p>Weddings &ensp; Baby Showers &ensp; Birthdays &ensp; Funerals &ensp; Unveilings &ensp; 
+                    <p>Weddings &nbsp; Baby Showers &nbsp; Birthdays &nbsp; Funerals &ensp; Unveilings &ensp; 
                     Lobola Ceremony</p>
                 </div>
                 <div class="services-col">
