--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div class="row">
                 <div class="services-col">
                     <h3>Event Decorate</h3>
-                    <p>Weddings &nbsp; Baby Showers &nbsp; Birthdays &nbsp; Funerals &ensp; Unveilings &ensp; 
+                    <p>Weddings &nbsp; Baby Showers &nbsp; Birthdays &nbsp; Funerals &nbsp; Unveilings &nbsp; 
                     Lobola Ceremony</p>
                 </div>
                 <div class="services-col">
@@ -77,6 +77,12 @@
                 </div>
             </div>
             <a class="gallery-btn" href="">View All</a>
+        </section>
+        <!--Footer-->
+        <section class="footer">
+            <div class="icons">
+                <a href=""><i class="fa fa-whatsapp"></i></a>
+            </div>
         </section>
         <!-- JavaScript for Toggle menu -->
         <script>
