--- a/index.html
+++ b/index.html
@@ -28,9 +28,11 @@
 
             <div class="text-box">
                 <h1>Welcome To <br> Lornia's Event Decor</h1>
-                <p>We provide event decorating services, any event that you need to be decorated contact us. 
+                <p>We are a team of event designers who specialize in creating unforgettable event 
+                experiences. With years of experience and a keen eye for detail, we take pride 
+                in turning your dream wedding or any other ceremony/event into a reality. 
                 <br>We do birthday parties, baby showers, weddings, funerals and many more.</p>
-                <a class="visit-btn" href="">Visit us to know more</a>
+                <a class="visit-btn" href="">Contact us to know more</a>
             </div>
         </section>
         <!--Services-->
